bubba-frontend (2.1.35) vincent hugo; urgency=low

  * Try show version of bubba3-kernel instead of bubba-kernel

 -- Carl Fürstenberg <carl@excito.com>  Mon, 30 May 2011 13:20:31 +0200

bubba-frontend (2.1.34) vincent hugo; urgency=low

  * Removing old Filemanager backup/restore interface
  * Adding German translation of system language
  * bump session expiration from tho hours to 24 hours
  * open link to www.excito.com in new tab (closes: #1656)
  * Adding Spanish translation
  * adding git buildpackage config file
  * Remove the printing interface

 -- Carl Fürstenberg <carl@excito.com>  Wed, 25 May 2011 15:42:25 +0200

bubba-frontend (2.1.33) vincent hugo; urgency=low

  * Adding new backup interface
  * Implementing backup model
  * Adding functionallity to identify the status of jobs
  * remove debug code
  * make it more disabled
  * Listing of run jobs for a backup job
  * The perl→php transition code, might be useful
  * Backup job creation wizard
  * Backup directory selection dialog
  * target server settings
  * disable validation for time beeing
  * Backup schedule settings
  * adding timeline code
  * Wizard dialog: make height be more dynamic
  * Wizard: adding timeline note
  * Wizard: adding security step
  * Backup ajax: remove old sample data code
  * Escaping html special chars in messages
  * CSS: make class ui-helper-inline important
  * Selection fileds classes
  * Change number of days in month
  * Adding custom selection infrastructure
  * updating size of popups and position
  * Custom select dialog popup logic
  * Make dialog content buttons look like other buttons
  * fix typo: test → text
  * special case for ordinal number 11 12 and 13
  * Schedule: disable and enable per choice
  * remove some ending line spaces
  * change if statements to switch statement
  * Security: enable/disable fields per checkbox
  * adding select for local devices in target view
  * adding disabling of impossible timeline options