@@ -699,7 +699,7 @@ $lang["Create empty album"]="Leeres Album erstellen";
 $lang["Handle email for domain"]="E-Mail für Domäne verarbeiten";
 $lang["Email retrieval"]="E-Mail-Abruf";
 $lang["Run now"]="Jetzt ausführen";
-$lang["UPNP streaming"]="UPNP Streaming";
+$lang["DLNA streaming"]="DLNA Streaming";
 $lang["Backup complete"]="Sicherung abgeschlossen";
 $lang["Obtain IP-address automatically"]="IP-Adresse automatisch erhalten";
 $lang["MAC-address"]="MAC-Adresse";
