@@ -725,7 +725,7 @@ $lang["Create empty album"]="Create empty album";
 $lang["Handle email for domain"]="Handle email for domain";
 $lang["Email retrieval"]="Email retrieval";
 $lang["Run now"]="Run now";
-$lang["UPNP streaming"]="UPNP streaming";
+$lang["DLNA streaming"]="DLNA streaming";
 $lang["Backup complete"]="Backup complete";
 $lang["Obtain IP-address automatically"]="Obtain IP-address automatically";
 $lang["MAC-address"]="MAC-address";
