@@ -660,7 +660,7 @@ $lang["Create empty album"]="Crear album vac&iacute;o";
 $lang["Handle email for domain"]="Manejar el correo del dominio";
 $lang["Email retrieval"]="Recuperaci&oacute;n de correo";
 $lang["Run now"]="Ejecutar ahora";
-$lang["UPNP streaming"]="Difusi&oacute;n UPNP";
+$lang["DLNA streaming"]="Difusi&oacute;n DLNA";
 $lang["Backup complete"]="Respaldo completo";
 $lang["Obtain IP-address automatically"]="Obtener direcci&oacute;n IP autom&Aacute;ticamente";
 $lang["MAC-address"]="MAC-address";
